# mavec

./: Cargo.toml  LICENSE  README.md
src/: core.rs  error.rs
