[package]
name = "mavec"
version = "0.1.1"
edition = "2021"
authors = ["Propfend"]
description = "Converts an object-like json into a String vector."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Propfend/mavec"
repository = "https://github.com/Propfend/mavec"
readme = "README.md"

[dependencies]
serde_json = {version = "1.0.134", features = ["preserve_order"]}
thiserror = "2.0.9"
